# phantom-sc2

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Dockerfile  Logo.pdn  Makefile  README.md  __init__.py  benchmark.py  border.png.npy  bot_strategy.py  build.py  build_order.py  changelog.txt  common.py  constants.py  ladder.py  ladderbots.json  macro_objective.py  macro_target.py  main.py  mypy.ini  plot_balance.py  plot_results.py  plot_utils.py  profile_name.prof  protoss_macro.py  pyproject.toml  quotes.py  quotes.txt  requirements.txt  reserve.py  results.json  run.py  run_league.py  run_local.py  run_snakeviz.py  run_test.py  setup.cfg  (+15 more)
.VSCodeCounter/2022-03-07_08-00-02/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/: dependabot.yml
.github/workflows/: Dockerfile  build.yml  ladder_zip.yml  python-actions.yml  requirements.txt
MapAnalyzer/: Debugger.py  MapData.py  Pather.py  Polygon.py  Region.py  __init__.py  constants.py  constructs.py  destructibles.py  exceptions.py  utils.py
MapAnalyzer/cext/: wrapper.py
bot/: action.py  agent.py  ai_base.py  base.py  build_order.py  chat.py  combat.py  combat_predictor.py  constants.py  corrosive_biles.py  cost.py  creep.py  debug.py  dodge.py  influence_map.py  inject.py  macro.py  main.py  observation.py  phantom.py  predictor.py  scout.py  state.py  strategy.py  transfuse.py  unit_counters.py  utils.py  zerg.py
bot/ai/: game.py  main.py  observation.py  replay.py  utils.py
bot/behaviors/: bile.py  burrow.py  changeling_scout.py  creep.py  execute_task.py  extractor_trick.py  gather.py  inject.py  overlord_drop.py  search.py  survive.py  transfuse.py
bot/combat/: action.py  corrosive_biles.py  dodge.py  main.py  predictor.py  presence.py
bot/common/: action.py  assignment.py  component.py  constants.py  cost.py  debug.py  main.py  observation.py  replay_file.py  unit_composition.py  utils.py
bot/components/: base.py  build_order.py  chat.py  combat.py  creep.py  dodge.py  inject.py  macro.py  scout.py  strategy.py  transfuse.py  unit_manager.py
bot/cython/: dijkstra.pyx  dijkstra_pathing.py
bot/data/: multivariate_normal.py  normal.py  state.py
bot/macro/: build_order.py  planner.py  state.py  strategy.py
bot/modules/: chat.py  combat.py  dodge.py  macro.py  module.py  scout.py  unit_manager.py
bot/parameter/: constants.py  main.py  multivariate_normal.py  normal.py
bot/queens/: creep.py  inject.py  transfuse.py
bot/resources/: action.py  assignment.py  base.py  context.py  expansion.py  gather.py  group.py  main.py  mineral_patch.py  observation.py  report.py  resource_base.py  resource_group.py  resource_manager.py  resource_unit.py  state.py  unit.py  utils.py  vespene_geyser.py
bot/strategies/: hatch_first.py  pool_first.py  roach_rush.py  strategy.py  terran_macro.py  zerg_macro.py
bot/tasks/: scout_location.py  task.py
codex/: TODO.md  audit.md  blocked_spire.md  boost_army_priority_against_rush.md  dockerized_training.md  early_game_scout.md  grand_strategy.md  highspy_distribute_solver.md  integrate_cvxpygen.md  knowledge.md  overlord_creep.md  parameters_per_matchup.md  probabilistic_alive_flags.md  retreat_to_own_creep_in_zvz.md  simulation_time_sampling.md  unified_tactics.md
config/: build.toml  build.yml  local_macro.yml  local_micro.yml  yamllint.yml
examples/: cannon_rush.py  expand.py  warpgate_push.py  zergling_rush.py
models/: scout.pkl.xz
notebooks/: .gitignore  analytical_micro.ipynb  analyze_replays.ipynb  benchmark_distribute_cp_vs_hs.ipynb  benchmark_distribute_cpg_vs_hs.ipynb  benchmark_lp.ipynb  benchmark_np.ipynb  benchmark_qhull.ipynb  benchmark_sc2.ipynb  benchmarks.ipynb  combat_simulator_vs_dataset.ipynb  combat_simulator_vs_dataset_v2.ipynb  compile_problems.ipynb  cpg_compression_test.ipynb  create_dataset.ipynb  dijkstra_benchmark.ipynb  dijkstra_visualize.ipynb  evo_benchmark_cornn.ipynb  lancester_prediction.ipynb  lancester_simulation.ipynb  lanchester_distance_vs_outcome.ipynb  mlp_composition_visualization.ipynb  nes.ipynb  replay.py  scout_train.ipynb  scout_train_torch.ipynb
phantom/: __init__.py  agent.py  blocked_positions.py  combat.py  component.py  config.py  corrosive_bile.py  corrosive_biles.py  creep.py  debug.py  dodge.py  dummy.py  exporter.py  knowledge.py  main.py  observation.py  overseers.py  parameters.py  queens.py  replay.py  scout.py  scout_predictor.py  simulator.py  transfuse.py
plot/: plot_balance.py  plot_results.py  plot_utils.py
scripts/: analyze_replay.py  analyze_replays.py  analyze_replays.sh  analyze_replays_docker.sh  benchmark_cornn.py  build.py  build_zip.py  compile_cvxpy.py  compile_cvxpy.sh  compile_cython.py  copy_modules.py  create_dataset.sh  create_ladder_zip.py  generate_combat_sim_data.py  run_blizzard_protoss.py  run_blizzard_zerg.py  run_blizzardai_terran.py  run_ladder.py  run_local.py  run_test.py  simulate_combats_mock.py  travis_test_script.py  update_ares.py  upload_to_ai_arena.py  utils.py
src/: agent.py  ai_base.py  ai_component.py  bot_events.py  chat.py  constants.py  corrosive_biles.py  cost.py  debug.py  dodge.py  dummy.py  influence_map.py  lingflood.py  macro_plan.py  main.py  observation.py  opponents.py  pool12_allin.py  pool15_flood.py  probots.py  scout.py  techtree.py  unit_counters.py  utils.py  value_map.py  zerg.py
suntzu/: ai_base.py  ai_component.py  base.py  binned_map.py  build_orders.py  chat.py  common.py  constants.py  corrosive_bile.py  cost.py  dummy.py  enums.py  gas.py  macro_plan.py  macro_target.py  minerals.py  observation.py  resource.py  resource_group.py  resource_single.py  unit_counters.py  utils.py  value_map.py  zerg.py
templates/: ladderbots.json  run.py  run.py.template
tests/: Dockerfile  run_test.py  test_dead_airspace.py  test_distribute.py  test_matchup_parameters.py  test_mock_combat_setups.py  test_own_creep.py  test_parameters.py  test_simulation.py  test_simulator.py
tools/: dummy.py  ladder_api.py  timer.py
vault/: LarvaSpawn.ods  protoss.py  terran.py  unit_counters.py
(+320 files in other folders)
