[project]
name = "phantom"
version = "3.2.0"
description = "StarCraft II Bot playing Zerg Macro"
authors = [
    {name = "Volker Schmidt", email = "volker.schmidt91@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "burnysc2 @ git+https://github.com/august-k/python-sc2.git@develop",
    "click (>=8.1.8,<9.0.0)",
    "river>=0.22.0",
    "pyyaml (>=6.0.2,<7.0.0)",
    "scikit-image>=0.24.0",
    "scikit-learn (>=1.6.1,<2.0.0)",
]

[project.urls]
Repository = "https://github.com/vschmidt91/phantom-sc2.git"

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "mpyq>=0.2.5",
    "notebook (>=7.3.3,<8.0.0)",
    "pandas>=2.2.3",
    "plotly (>=6.0.1,<7.0.0)",
    "s2protocol>=5.0.13.92440.4",
    "snakeviz>=2.2.0",
    "tqdm>=4.67.0",
]
test = [
    "mypy>=1.12.0",
    "ruff (>=0.11.0,<0.12.0)",
    "types-pyyaml (>=6.0.12.20250326,<7.0.0.0)",
    "types-requests (>=2.32.0.20250306,<3.0.0.0)",
    "types-tqdm>=4.66.0.20240417",
]
build = [
    "cvxpygen>=0.4.3",
    "cython>=3.0.10",
    "cython-extensions-sc2 @ git+https://github.com/AresSC2/cython-extensions-sc2.git",
    "map-analyzer @ git+https://github.com/raspersc2/SC2MapAnalysis.git",
    "requests (>=2.32.3,<3.0.0)",
]

[tool.poetry]
packages = [
    { include = "phantom" },
    { include = "sc2_helper", from="ares-sc2" },
    { include = "ares", from="ares-sc2/src"},
]
include = [
    { path = "run.py", format = ["sdist", "wheel"] },
    { path = "scripts", format = ["sdist", "wheel"] },
    { path = "phantom/cython/*.so", format = ["sdist", "wheel"] },
    { path = "phantom/cython/*.pyd", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
ares-sc2 = { path = "ares-sc2", develop = false }

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core", "Cython", "numpy", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = [
    "cvxpygen",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F401"]

[[tool.mypy.overrides]]
module = [
    "phantom.cython.*",
    "phantom.compiled.*",
    "ares.*",
    "Cython.*",
    "distutils.*",
    "loguru.*",
    "cvxpy.*",
    "cvxpygen.*",
    "sc2.*",
    "scipy.*",
    "skimage.*",
    "pandas.*",
    "sklearn.*",
    "cython_extensions.*",
    "mpyq.*",
    "s2protocol.*",
]
ignore_missing_imports = true
ignore_errors = true